src/sass/formio.form.scss
/* ... */
.open-modal-button {
  width: 100%;
  text-align: left;
}

.formio-component-modal-wrapper-signature .open-modal-button {
  text-align: center;
  height: 100%;
  font-size: 1.4em;
  padding: 0;
  margin: 0;
}

/* ckeditor5-image/theme/image.css */
.formio-component-content .image {
  display: table;
  clear: both;
  text-align: center;
  margin: 1em auto
}
/* ckeditor5-image/theme/image.css */
.formio-component-content .image > img {
  display: block;
  margin: 0 auto;
  max-width: 100%;
  min-width: 50px;
}
/* ckeditor5-image/theme/imagecaption.css */
.formio-component-content .image > figcaption {
  display: table-caption;
  caption-side: bottom;
  word-break: break-word;
  color: hsl(0, 0%, 20%);
  background-color: hsl(0, 0%, 97%);
  padding: .6em;
  font-size: .75em;
  outline-offset: -1px;
}
/* ckeditor5-image/theme/imageresize.css */
.formio-component-content .image.image_resized {
  max-width: 100%;
  display: block;
  box-sizing: border-box
}
/* ckeditor5-image/theme/imageresize.css */
.formio-component-content .image.image_resized img {
  width: 100%;
}
/* ckeditor5-image/theme/imageresize.css */
.formio-component-content .image.image_resized > figcaption {
  display: block;
}
/* ckeditor5-media-embed/theme/mediaembed.css */
.formio-component-content .media {
  clear: both;
  margin: 1em 0;
  display: block;
  min-width: 15em;
}
/* ckeditor5-image/theme/imagestyle.css */
.formio-component-content .image-style-side:not(.image_resized), .formio-component-content .image-style-align-left:not(.image_resized), .formio-component-content .image-style-align-center:not(.image_resized), .formio-component-content .image-style-align-right:not(.image_resized) {
  max-width: 50%;
}
/* ckeditor5-image/theme/imagestyle.css */
.formio-component-content .image-style-side:not(.image_resized), .formio-component-content .image-style-align-left:not(.image_resized), .formio-component-content .image-style-align-center:not(.image_resized), .formio-component-content .image-style-align-right:not(.image_resized) {
  max-width: 50%;
}
/* ckeditor5-image/theme/imagestyle.css */
.formio-component-content .image-style-side:not(.image_resized), .formio-component-content .image-style-align-left:not(.image_resized), .formio-component-content .image-style-align-center:not(.image_resized), .formio-component-content .image-style-align-right:not(.image_resized) {
  max-width: 50%;
}
/* ckeditor5-image/theme/imagestyle.css */
.formio-component-content .image-style-side:not(.image_resized), .formio-component-content .image-style-align-left:not(.image_resized), .formio-component-content .image-style-align-center:not(.image_resized), .formio-component-content .image-style-align-right:not(.image_resized) {
  max-width: 50%;
}
/* ckeditor5-image/theme/imagestyle.css */
.formio-component-content .image-style-side {
  float: right;
  margin-left: var(--ck-image-style-spacing);
}
/* ckeditor5-image/theme/imagestyle.css */
.formio-component-content .image-style-align-left {
  float: left;
  margin-right: var(--ck-image-style-spacing);
}
/* ckeditor5-image/theme/imagestyle.css */
.formio-component-content .image-style-align-center {
  margin-left: auto;
  margin-right: auto;
}
/* ckeditor5-image/theme/imagestyle.css */
.formio-component-content .image-style-align-right {
  float: right;
  margin-left: var(--ck-image-style-spacing);
}
/* ckeditor5-block-quote/theme/blockquote.css */
.formio-component-content blockquote {
  overflow: hidden;
  padding-right: 1.5em;
  padding-left: 1.5em;
  margin-left: 0;
  margin-right: 0;
  font-style: italic;
  border-left: solid 5px hsl(0, 0%, 80%);
}
/* ckeditor5-block-quote/theme/blockquote.css */
.formio-component-content[dir="rtl"] blockquote {
  border-left: 0;
  border-right: solid 5px hsl(0, 0%, 80%);
}

.formio-component-address.formio-component-label-hidden {
  & > label.field-required {
    z-index: 1;

    & ~ .address-autocomplete-container .address-autocomplete-remove-value-icon {
      right: 20px;
    }
  }
}

.address-autocomplete-container {
  position: relative;

  .address-autocomplete-remove-value-icon {
    cursor: pointer;
    position: absolute;
    margin-top: -9px;
    right: 10px;
    top: 50%;

    &--hidden {
      display: none;
    }
  }
}

.autocomplete {
  background: white;
  font: 14px/22px "-apple-system", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  overflow: auto;
  box-sizing: border-box;
  border: 1px solid rgba(50, 50, 50, 0.6);
  z-index: $autocomplete-in-dialog-z-index;
}

.autocomplete > div {
  cursor: pointer;
  padding: 6px 10px;
}

.autocomplete > div:hover:not(.group),
.autocomplete > div.selected {
  background: #1e90ff;
  color: #ffffff;
}

.field-wrapper {
  display: flex;

  &--reverse {
    flex-direction: row-reverse;
  }

  .field-label--right {
    text-align: right;
  }
}

.formio-component-modal-wrapper {
  margin-bottom: 10px;

  .component-rendering-hidden {
    visibility: hidden;
  }
}

//show textarea submission in read-only mode and PDF view with initial line and space formatting
div[read-only="true"] {
  .formio-component-textarea {
    div[ref="input"] {
      white-space: pre-wrap;
    }
  }
}

